[tool.poetry]
name = "transport-simulation-challenge"
packages = [
    { include = "app", from = "." }
]
version = "0.1.0"
description = ""
authors = ["jahlon <jahlon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,!=3.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transport = "app.main:main"
